--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
 
+<!--<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bazaar Bharat - Welcome to India's Online Marketplace</title>
+    <link rel="stylesheet" href="E commerce part 1 CSS.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <h1>Bazaar Bharat</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="cart">
+          <a href="#"><img src="cart-icon.png" alt="Cart" /></a>
+        </div>
+      </div>
+    </header>
+    <section class="hero">
+      <div class="container">
+        <h2>Welcome to Bazaar Bharat</h2>
+        <p>Your one-stop shop for authentic Indian products</p>
+        <button class="shop-now">Shop Now</button>
+      </div>
+    </section>
+    <section class="featured-products">
+      <div class="container">
+        <h2>Featured Products</h2>
+        <div class="product-grid">
+          <div class="product">
+            <img src="product1.jpg" alt="Product 1" />
+            <h3>Handcrafted Jewelry</h3>
+            <p>Elegant and unique designs</p>
+            <button>Add to Cart</button>
+          </div>
+          <div class="product">
+            <img src="product2.jpg" alt="Product 2" />
+            <h3>Traditional Attire</h3>
+            <p>Embrace the culture</p>
+            <button>Add to Cart</button>
+          </div>
+          <div class="product">
+            <img src="product3.jpg" alt="Product 3" />
+            <h3>Home Decor</h3>
+            <p>Beautify your home</p>
+            <button>Add to Cart</button>
+          </div>
+          <div class="product">
+            <img src="product4.jpg" alt="Product 4" />
+            <h3>Organic Spices</h3>
+            <p>Flavorful and healthy</p>
+            <button>Add to Cart</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Bazaar Bharat. All rights reserved.</p>
+      </div>
+    </footer>
+    <script src="E commerce part 1 Javascript.js"></script>
+  </body>
+</html>-->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bazaar Bharat - Welcome to India's Online Marketplace</title>
+    <link rel="stylesheet" href="E commerce part 1 CSS.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <h1>Bazaar Bharat</h1>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <div class="container">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#product">Shop</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="cart">
+          <a href="#"><img src="cart.png" alt="Cart" /></a>
+        </div>
+      </div>
+    </nav>
+    <section class="hero">
+      <div class="container">
+        <h2>Welcome to Bazaar Bharat</h2>
+        <p>Your one-stop shop for authentic Indian products</p>
+        <button class="shop-now">Shop Now</button>
+      </div>
+    </section>
+    <section class="featured-products">
+      <div class="container">
+        <h2>Featured Products</h2>
+        <div class="product-grid">
+          <div class="product">
+            <img src="product1.jpg" alt="Product 1" />
+            <h3>Handcrafted Jewelry</h3>
+            <p>Elegant and unique designs</p>
+            <button>Add to Cart</button>
+            <button>See More</button>
+          </div>
+          <div class="product">
+            <img src="product2.jpg" alt="Product 2" />
+            <h3>Traditional Attire</h3>
+            <p>Embrace the culture</p>
+            <button>Add to Cart</button>
+            <button>See More</button>
+          </div>
+          <div class="product">
+            <img src="product3.jpg" alt="Product 3" />
+            <h3>Home Decor</h3>
+            <p>Beautify your home</p>
+            <button>Add to Cart</button>
+
+            <a href="Home Decor/Home Decor.html" class="see-more-button"
+              >See More</a
+            >
+          </div>
+          <div class="product">
+            <img src="product4.jpg" alt="Product 4" />
+            <h3>Organic Spices</h3>
+            <p>Flavorful and healthy</p>
+            <button>Add to Cart</button>
+            <button>See More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Bazaar Bharat. All rights reserved.</p>
+      </div>
+    </footer>
+    <script src="E commerce part 1 Javascript.js"></script>
+  </body>
+
+
